dz3/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: health-kubernetes-dz3
spec:
  selector:
    app: health-kubernetes-dz3
  ports:
    - port: 80
      targetPort: 8000
  type: ClusterIP
